[tool.poetry]
name = "zerolan-ump"
version = "0.1.1"
description = "Unified Model Pipeline for Zerolan Project"
authors = ["AkagawaTsurunaki <AkagawaTsurunaki@outlook.com>"]
readme = "README.md"
packages = [{include = "zerolan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
