[tool.poetry]
name = "zerolan-ump"
version = "1.3.0"
description = "Unified Model Pipeline for Zerolan Project"
authors = ["AkagawaTsurunaki <AkagawaTsurunaki@outlook.com>"]
readme = "README.md"
packages = [{include = "zerolan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.66.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
